src/Black.Beard.Jslt/Jslt/Parser/Grammar/.antlr/JsltParser.java
// Generated from c:/Src/jslt/src/Black.Beard.Jslt/Jslt/Parser/Grammar/JsltParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JsltParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SUBSCRIPT=1, WILDCARD_SUBSCRIPT=2, CURRENT_VALUE=3, COLON=4, SHARP=5, 
		RECURSIVE_DESCENT=6, URI_TYPE=7, TIME_TYPE=8, DATETIME_TYPE=9, STRING_TYPE=10, 
		BOOLEAN_TYPE=11, GUID_TYPE=12, INTEGER_TYPE=13, DECIMAL_TYPE=14, WHEN_TYPE=15, 
		IN=16, NIN=17, SUBSETOF=18, CONTAINS=19, SIZE=20, EMPTY=21, TRUE=22, FALSE=23, 
		DEFAULT=24, EQ=25, NE=26, GT=27, LT=28, LE=29, GE=30, NT=31, PLUS=32, 
		MINUS=33, DIVID=34, MODULO=35, POWER=36, AND=37, OR=38, AND_EXCLUSIVE=39, 
		OR_EXCLUSIVE=40, COALESCE=41, CHAIN=42, NULL=43, BRACE_LEFT=44, BRACE_RIGHT=45, 
		BRACKET_LEFT=46, BRACKET_RIGHT=47, COMMA=48, PAREN_LEFT=49, PAREN_RIGHT=50, 
		DOLLAR=51, QUESTION=52, STRING=53, STRING2=54, MULTI_LINE_COMMENT=55, 
		SINGLE_QUOTE_CODE_STRING=56, NUMBER=57, SIGNED_NUMBER=58, INT=59, SIGNED_INT=60, 
		ID=61, IDQUOTED=62, VARIABLE_NAME=63, IDLOWCASE=64;
	public static final int
		RULE_script = 0, RULE_json = 1, RULE_obj = 2, RULE_pair = 3, RULE_string = 4, 
		RULE_array = 5, RULE_jsonValue = 6, RULE_jsonValueString = 7, RULE_jsonValueNumber = 8, 
		RULE_jsonValueInteger = 9, RULE_jsonValueBoolean = 10, RULE_jsonValueNull = 11, 
		RULE_jsonType = 12, RULE_jsonLtOperations = 13, RULE_jsonLtOperation = 14, 
		RULE_jsonLtItem = 15, RULE_operation = 16, RULE_variable = 17, RULE_jsonfunctionCall = 18, 
		RULE_jsonfunctionName = 19, RULE_jsonValueList = 20, RULE_jsltJsonpath = 21, 
		RULE_jsonpath = 22, RULE_jsonpath_ = 23, RULE_jsonpath__ = 24, RULE_jsonpath_subscript = 25, 
		RULE_subscriptables = 26, RULE_subscriptableArguments = 27, RULE_subscriptableBareword = 28, 
		RULE_jsonPath_identifier = 29, RULE_subscriptable = 30, RULE_sliceable = 31, 
		RULE_signedNumber = 32, RULE_signedInt = 33, RULE_sliceableLeft = 34, 
		RULE_sliceableRight = 35, RULE_sliceableBinary = 36, RULE_expressions = 37, 
		RULE_expression = 38, RULE_binaryOperator = 39, RULE_value = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"script", "json", "obj", "pair", "string", "array", "jsonValue", "jsonValueString", 
			"jsonValueNumber", "jsonValueInteger", "jsonValueBoolean", "jsonValueNull", 
			"jsonType", "jsonLtOperations", "jsonLtOperation", "jsonLtItem", "operation", 
			"variable", "jsonfunctionCall", "jsonfunctionName", "jsonValueList", 
			"jsltJsonpath", "jsonpath", "jsonpath_", "jsonpath__", "jsonpath_subscript", 
			"subscriptables", "subscriptableArguments", "subscriptableBareword", 
			"jsonPath_identifier", "subscriptable", "sliceable", "signedNumber", 
			"signedInt", "sliceableLeft", "sliceableRight", "sliceableBinary", "expressions", 
			"expression", "binaryOperator", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'*'", "'@'", "':'", "'#'", "'..'", "'#uri'", "'#time'", 
			"'#datetime'", "'#string'", "'#boolean'", "'#uuid'", "'#integer'", "'#decimal'", 
			"'@when'", "'in'", "'nin'", "'subsetof'", "'contains'", "'size'", "'empty'", 
			"'true'", "'false'", "'default'", "'=='", "'!='", "'>'", "'<'", "'<='", 
			"'>='", "'!'", "'+'", "'-'", "'/'", "'%'", "'^'", "'&'", "'|'", "'&&'", 
			"'||'", "'??'", "'->'", "'null'", "'{'", "'}'", "'['", "']'", "','", 
			"'('", "')'", "'$'", "'?'", null, null, null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SUBSCRIPT", "WILDCARD_SUBSCRIPT", "CURRENT_VALUE", "COLON", "SHARP", 
			"RECURSIVE_DESCENT", "URI_TYPE", "TIME_TYPE", "DATETIME_TYPE", "STRING_TYPE", 
			"BOOLEAN_TYPE", "GUID_TYPE", "INTEGER_TYPE", "DECIMAL_TYPE", "WHEN_TYPE", 
			"IN", "NIN", "SUBSETOF", "CONTAINS", "SIZE", "EMPTY", "TRUE", "FALSE", 
			"DEFAULT", "EQ", "NE", "GT", "LT", "LE", "GE", "NT", "PLUS", "MINUS", 
			"DIVID", "MODULO", "POWER", "AND", "OR", "AND_EXCLUSIVE", "OR_EXCLUSIVE", 
			"COALESCE", "CHAIN", "NULL", "BRACE_LEFT", "BRACE_RIGHT", "BRACKET_LEFT", 
			"BRACKET_RIGHT", "COMMA", "PAREN_LEFT", "PAREN_RIGHT", "DOLLAR", "QUESTION", 
			"STRING", "STRING2", "MULTI_LINE_COMMENT", "SINGLE_QUOTE_CODE_STRING", 
			"NUMBER", "SIGNED_NUMBER", "INT", "SIGNED_INT", "ID", "IDQUOTED", "VARIABLE_NAME", 
			"IDLOWCASE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JsltParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JsltParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptContext extends ParserRuleContext {
		public JsonContext json() {
			return getRuleContext(JsonContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JsltParser.EOF, 0); }
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			json();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonContext extends ParserRuleContext {
		public JsonValueContext jsonValue() {
			return getRuleContext(JsonValueContext.class,0);
		}
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_json);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			jsonValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjContext extends ParserRuleContext {
		public TerminalNode BRACE_LEFT() { return getToken(JsltParser.BRACE_LEFT, 0); }
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public TerminalNode BRACE_RIGHT() { return getToken(JsltParser.BRACE_RIGHT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JsltParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JsltParser.COMMA, i);
		}
		public ObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obj; }
	}

	public final ObjContext obj() throws RecognitionException {
		ObjContext _localctx = new ObjContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_obj);
		int _la;
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(BRACE_LEFT);
				setState(88);
				pair();
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(89);
					match(COMMA);
					setState(90);
					pair();
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(96);
				match(BRACE_RIGHT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(BRACE_LEFT);
				setState(99);
				match(BRACE_RIGHT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode COLON() { return getToken(JsltParser.COLON, 0); }
		public JsonValueContext jsonValue() {
			return getRuleContext(JsonValueContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			string();
			setState(103);
			match(COLON);
			setState(104);
			jsonValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(JsltParser.STRING, 0); }
		public TerminalNode STRING2() { return getToken(JsltParser.STRING2, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode BRACKET_LEFT() { return getToken(JsltParser.BRACKET_LEFT, 0); }
		public List<JsonValueContext> jsonValue() {
			return getRuleContexts(JsonValueContext.class);
		}
		public JsonValueContext jsonValue(int i) {
			return getRuleContext(JsonValueContext.class,i);
		}
		public TerminalNode BRACKET_RIGHT() { return getToken(JsltParser.BRACKET_RIGHT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(JsltParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JsltParser.COMMA, i);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_array);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(BRACKET_LEFT);
				setState(109);
				jsonValue();
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(110);
					match(COMMA);
					setState(111);
					jsonValue();
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(BRACKET_RIGHT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				match(BRACKET_LEFT);
				setState(120);
				match(BRACKET_RIGHT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueContext extends ParserRuleContext {
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public JsonLtOperationsContext jsonLtOperations() {
			return getRuleContext(JsonLtOperationsContext.class,0);
		}
		public JsonValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValue; }
	}

	public final JsonValueContext jsonValue() throws RecognitionException {
		JsonValueContext _localctx = new JsonValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jsonValue);
		try {
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BRACE_LEFT:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				obj();
				}
				break;
			case BRACKET_LEFT:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				array();
				}
				break;
			case TRUE:
			case FALSE:
			case NT:
			case NULL:
			case PAREN_LEFT:
			case DOLLAR:
			case STRING:
			case STRING2:
			case NUMBER:
			case SIGNED_NUMBER:
			case INT:
			case SIGNED_INT:
			case ID:
			case VARIABLE_NAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				jsonLtOperations();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueStringContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public JsonTypeContext jsonType() {
			return getRuleContext(JsonTypeContext.class,0);
		}
		public JsonValueStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValueString; }
	}

	public final JsonValueStringContext jsonValueString() throws RecognitionException {
		JsonValueStringContext _localctx = new JsonValueStringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_jsonValueString);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			string();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32648L) != 0)) {
				{
				setState(129);
				jsonType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueNumberContext extends ParserRuleContext {
		public SignedNumberContext signedNumber() {
			return getRuleContext(SignedNumberContext.class,0);
		}
		public SignedIntContext signedInt() {
			return getRuleContext(SignedIntContext.class,0);
		}
		public JsonTypeContext jsonType() {
			return getRuleContext(JsonTypeContext.class,0);
		}
		public JsonValueNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValueNumber; }
	}

	public final JsonValueNumberContext jsonValueNumber() throws RecognitionException {
		JsonValueNumberContext _localctx = new JsonValueNumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_jsonValueNumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
			case SIGNED_NUMBER:
				{
				setState(132);
				signedNumber();
				}
				break;
			case INT:
			case SIGNED_INT:
				{
				setState(133);
				signedInt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32648L) != 0)) {
				{
				setState(136);
				jsonType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueIntegerContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JsltParser.INT, 0); }
		public JsonTypeContext jsonType() {
			return getRuleContext(JsonTypeContext.class,0);
		}
		public JsonValueIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValueInteger; }
	}

	public final JsonValueIntegerContext jsonValueInteger() throws RecognitionException {
		JsonValueIntegerContext _localctx = new JsonValueIntegerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_jsonValueInteger);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(INT);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32648L) != 0)) {
				{
				setState(140);
				jsonType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueBooleanContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(JsltParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(JsltParser.FALSE, 0); }
		public JsonTypeContext jsonType() {
			return getRuleContext(JsonTypeContext.class,0);
		}
		public JsonValueBooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValueBoolean; }
	}

	public final JsonValueBooleanContext jsonValueBoolean() throws RecognitionException {
		JsonValueBooleanContext _localctx = new JsonValueBooleanContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_jsonValueBoolean);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32648L) != 0)) {
				{
				setState(144);
				jsonType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonValueNullContext extends ParserRuleContext {
		public TerminalNode NULL() { return getToken(JsltParser.NULL, 0); }
		public JsonValueNullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonValueNull; }
	}

	public final JsonValueNullContext jsonValueNull() throws RecognitionException {
		JsonValueNullContext _localctx = new JsonValueNullContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_jsonValueNull);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(NULL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonTypeContext extends ParserRuleContext {
		public TerminalNode BOOLEAN_TYPE() { return getToken(JsltParser.BOOLEAN_TYPE, 0); }
		public TerminalNode URI_TYPE() { return getToken(JsltParser.URI_TYPE, 0); }
		public TerminalNode TIME_TYPE() { return getToken(JsltParser.TIME_TYPE, 0); }
		public TerminalNode DATETIME_TYPE() { return getToken(JsltParser.DATETIME_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(JsltParser.STRING_TYPE, 0); }
		public TerminalNode GUID_TYPE() { return getToken(JsltParser.GUID_TYPE, 0); }
		public TerminalNode INTEGER_TYPE() { return getToken(JsltParser.INTEGER_TYPE, 0); }
		public TerminalNode DECIMAL_TYPE() { return getToken(JsltParser.DECIMAL_TYPE, 0); }
		public TerminalNode CURRENT_VALUE() { return getToken(JsltParser.CURRENT_VALUE, 0); }
		public TerminalNode IDLOWCASE() { return getToken(JsltParser.IDLOWCASE, 0); }
		public JsonTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonType; }
	}

	public final JsonTypeContext jsonType() throws RecognitionException {
		JsonTypeContext _localctx = new JsonTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_jsonType);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(BOOLEAN_TYPE);
				}
				break;
			case URI_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(URI_TYPE);
				}
				break;
			case TIME_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				match(TIME_TYPE);
				}
				break;
			case DATETIME_TYPE:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				match(DATETIME_TYPE);
				}
				break;
			case STRING_TYPE:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				match(STRING_TYPE);
				}
				break;
			case GUID_TYPE:
				enterOuterAlt(_localctx, 6);
				{
				setState(154);
				match(GUID_TYPE);
				}
				break;
			case INTEGER_TYPE:
				enterOuterAlt(_localctx, 7);
				{
				setState(155);
				match(INTEGER_TYPE);
				}
				break;
			case DECIMAL_TYPE:
				enterOuterAlt(_localctx, 8);
				{
				setState(156);
				match(DECIMAL_TYPE);
				}
				break;
			case CURRENT_VALUE:
				enterOuterAlt(_localctx, 9);
				{
				setState(157);
				match(CURRENT_VALUE);
				setState(158);
				match(IDLOWCASE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JsonLtOperationsContext extends ParserRuleContext {
		public List<JsonLtOperationContext> jsonLtOperation() {
			return getRuleContexts(JsonLtOperationContext.class);
		}
		public JsonLtOperationContext jsonLtOperation(int i) {
			return getRuleContext(JsonLtOperationContext.class,i);
		}
		public TerminalNode NT() { return getToken(JsltParser.NT, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode PAREN_LEFT() { return getToken(JsltParser.PAREN_LEFT, 0); }
		public TerminalNode PAREN_RIGHT() { return getToken(JsltParser.PAREN_RIGHT, 0); }
		public JsonTypeContext jsonType() {
			return getRuleContext(JsonTypeContext.class,0);
		}
		public JsonLtOperationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonLtOperations; }
	}
